{
  "version": 4,
  "terraform_version": "1.3.8",
  "serial": 56,
  "lineage": "ca5f776d-93fb-260a-93ca-e7df98c2c44d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c3fff3c8d7f97b4",
            "arn": "arn:aws:ec2:us-east-1:966364109421:instance/i-07d0513b4bca5983d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-062704796b416b308",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07d0513b4bca5983d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dev-ssh",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-048d20e8494a9fa1f",
            "private_dns": "ip-10-0-1-70.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.70",
            "public_dns": "ec2-52-90-127-86.compute-1.amazonaws.com",
            "public_ip": "52.90.127.86",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-062704796b416b308",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0c86a258399ccf257"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01ed303aae47794de",
            "tags": {
              "Name": "ec2"
            },
            "tags_all": {
              "Name": "ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c86a258399ccf257"
            ]
          },
          "dependencies": [
            "aws_security_group.app_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc_infra_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "infra_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:966364109421:internet-gateway/igw-072beac12dd09c9d0",
            "id": "igw-072beac12dd09c9d0",
            "owner_id": "966364109421",
            "tags": {
              "Name": "infra_gw",
              "description": "gateway for infrastructue"
            },
            "tags_all": {
              "Name": "infra_gw",
              "description": "gateway for infrastructue"
            },
            "vpc_id": "vpc-0ccec82dd95a75d7e"
          },
          "dependencies": [
            "aws_vpc.vpc_infra_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "second_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:966364109421:route-table/rtb-0e58c41b9da421201",
            "id": "rtb-0e58c41b9da421201",
            "owner_id": "966364109421",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-072beac12dd09c9d0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route"
            },
            "tags_all": {
              "Name": "public_route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ccec82dd95a75d7e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.infra_gw",
            "aws_vpc.vpc_infra_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "second_rt_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:966364109421:route-table/rtb-058ea4b295f42dd11",
            "id": "rtb-058ea4b295f42dd11",
            "owner_id": "966364109421",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private_route"
            },
            "tags_all": {
              "Name": "private_route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ccec82dd95a75d7e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_infra_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011dac484decd24cd",
            "route_table_id": "rtb-058ea4b295f42dd11",
            "subnet_id": "subnet-0be19e8105166c904"
          },
          "dependencies": [
            "aws_route_table.second_rt_private",
            "aws_subnet.private_subnets",
            "aws_vpc.vpc_infra_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fcef2ad031eb03cd",
            "route_table_id": "rtb-058ea4b295f42dd11",
            "subnet_id": "subnet-070036bcfcd151911"
          },
          "dependencies": [
            "aws_route_table.second_rt_private",
            "aws_subnet.private_subnets",
            "aws_vpc.vpc_infra_1"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb7b03db84d07a3f",
            "route_table_id": "rtb-058ea4b295f42dd11",
            "subnet_id": "subnet-062acd925c2b35fb4"
          },
          "dependencies": [
            "aws_route_table.second_rt_private",
            "aws_subnet.private_subnets",
            "aws_vpc.vpc_infra_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0049256e59e834752",
            "route_table_id": "rtb-0e58c41b9da421201",
            "subnet_id": "subnet-01ed303aae47794de"
          },
          "dependencies": [
            "aws_internet_gateway.infra_gw",
            "aws_route_table.second_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc_infra_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0efa57f4a4fb5158e",
            "route_table_id": "rtb-0e58c41b9da421201",
            "subnet_id": "subnet-0720767733bca299d"
          },
          "dependencies": [
            "aws_internet_gateway.infra_gw",
            "aws_route_table.second_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc_infra_1"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf06cad05d557f66",
            "route_table_id": "rtb-0e58c41b9da421201",
            "subnet_id": "subnet-0f23997864a4deb35"
          },
          "dependencies": [
            "aws_internet_gateway.infra_gw",
            "aws_route_table.second_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc_infra_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:966364109421:security-group/sg-0c86a258399ccf257",
            "description": "Security group for EC2 instance with web application",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c86a258399ccf257",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "application",
            "name_prefix": "",
            "owner_id": "966364109421",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "application-sg"
            },
            "tags_all": {
              "Name": "application-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ccec82dd95a75d7e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_infra_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:966364109421:subnet/subnet-0be19e8105166c904",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be19e8105166c904",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "966364109421",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 1"
            },
            "tags_all": {
              "Name": "Private Subnet 1"
            },
            "vpc_id": "vpc-0ccec82dd95a75d7e"
          },
          "dependencies": [
            "aws_vpc.vpc_infra_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:966364109421:subnet/subnet-070036bcfcd151911",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070036bcfcd151911",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "966364109421",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 2"
            },
            "tags_all": {
              "Name": "Private Subnet 2"
            },
            "vpc_id": "vpc-0ccec82dd95a75d7e"
          },
          "dependencies": [
            "aws_vpc.vpc_infra_1"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:966364109421:subnet/subnet-062acd925c2b35fb4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-062acd925c2b35fb4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "966364109421",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 3"
            },
            "tags_all": {
              "Name": "Private Subnet 3"
            },
            "vpc_id": "vpc-0ccec82dd95a75d7e"
          },
          "dependencies": [
            "aws_vpc.vpc_infra_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:966364109421:subnet/subnet-01ed303aae47794de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ed303aae47794de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "966364109421",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 1"
            },
            "tags_all": {
              "Name": "Public Subnet 1"
            },
            "vpc_id": "vpc-0ccec82dd95a75d7e"
          },
          "dependencies": [
            "aws_vpc.vpc_infra_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:966364109421:subnet/subnet-0720767733bca299d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0720767733bca299d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "966364109421",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 2"
            },
            "tags_all": {
              "Name": "Public Subnet 2"
            },
            "vpc_id": "vpc-0ccec82dd95a75d7e"
          },
          "dependencies": [
            "aws_vpc.vpc_infra_1"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:966364109421:subnet/subnet-0f23997864a4deb35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f23997864a4deb35",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "966364109421",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 3"
            },
            "tags_all": {
              "Name": "Public Subnet 3"
            },
            "vpc_id": "vpc-0ccec82dd95a75d7e"
          },
          "dependencies": [
            "aws_vpc.vpc_infra_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_infra_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:966364109421:vpc/vpc-0ccec82dd95a75d7e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03b5eedc981c2fe39",
            "default_route_table_id": "rtb-088b054b8ae77632a",
            "default_security_group_id": "sg-0e89062925ce2516d",
            "dhcp_options_id": "dopt-0e11dfd4da3fef0d1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ccec82dd95a75d7e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-088b054b8ae77632a",
            "owner_id": "966364109421",
            "tags": {
              "Name": "vpc_infra_1",
              "description": "vpc for infrastructue"
            },
            "tags_all": {
              "Name": "vpc_infra_1",
              "description": "vpc for infrastructue"
            }
          }
        }
      ]
    }
  ]
}